Feat: added `sidebar` service + handle layout & style of `dashboard` page

--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,4 +1,4 @@
 // A list of constants used in different components of the application
 
 $topbar-height: 60px;
-$page-max-width: 1440px;
+$sidebar-width: 300px;
