--- a/src/app/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/components/topbar/topbar.component.html
@@ -1,10 +1,8 @@
 <div class="-topbar-container">
-  <div class="-topbar-content">
-    <button mat-icon-button>
-      <mat-icon>menu</mat-icon>
-    </button>
-    <button mat-icon-button matTooltip="Per informazioni, visita MediaStack.com">
-      <mat-icon>help</mat-icon>
-    </button>
-  </div>
+  <button mat-icon-button (click)="sidebarService.toggleSidebar()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <button mat-icon-button matTooltip="Per informazioni, visita MediaStack.com">
+    <mat-icon>help</mat-icon>
+  </button>
 </div>
