--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,4 +1,6 @@
 // A list of constants used in different components of the application
 
 $topbar-height: 60px;
-$sidebar-width: 300px;
+$sidebar-tablet-desktop-width: 250px;
+$sidebar-background-color: #E5E7EB;
+$page-background-color: #F3F4F6;
