--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,12 @@ body {
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+h3 {
+  font-size: 18px;
+}
