Refactor: refactored some files

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
 <div class="-sidebar-container">
-  <div class="-title">
-    <h2>Menu</h2>
-  </div>
+  <div class="-title -h2">Menu</div>
   <div class="-menu-voices">
     <div class="-menu-voice" *ngFor="let voice of MAIN_MENU">
       <mat-icon>{{ voice.iconName }}</mat-icon>
