--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import '/src/consts.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +9,7 @@
 body { 
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
+  background-color: $page-background-color;
 }
 
 a {
@@ -14,6 +17,27 @@ a {
   text-decoration: none;
 }
 
-h3 {
-  font-size: 18px;
+img {
+  display: block;
 }
+
+//--------------------------------
+// Custom typography
+.-h1 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.-h2 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.-h3 {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+}
+//--------------------------------
