--- a/src/app/modules/authorized/modules/news/pages/news-index/news-index.page.scss
+++ b/src/app/modules/authorized/modules/news/pages/news-index/news-index.page.scss
@@ -11,6 +11,10 @@
   margin-bottom: 36px;
 }
 
+.-filters-container {
+  margin-bottom: 28px;
+}
+
 .-news-list {
   display: flex;
   flex-direction: column;
