Style: updated style of some files

--- a/src/app/shared/components/news-card/news-card.component.html
+++ b/src/app/shared/components/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<div class="-card-container">
+<div class="-card-container -custom-box-shadow">
   <div class="-image-side">
     <img [src]="newsItem?.image ?? '../../../../assets/imgs/immagine-non-disponibile.png'" alt="News Image">
   </div>
