--- a/src/app/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/components/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<div class="-topbar-container">
+<div class="-topbar-container -custom-box-shadow">
   <button mat-icon-button (click)="sidebarService.toggleSidebar()">
     <mat-icon>menu</mat-icon>
   </button>
