--- a/src/app/shared/components/news-card/news-card.component.scss
+++ b/src/app/shared/components/news-card/news-card.component.scss
@@ -5,7 +5,6 @@
   display: flex;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 2px 2px 4px 2px rgb(0, 0, 0, 0.1);
 
   @include mobile-tablet {
     flex-direction: column;
@@ -18,8 +17,16 @@
       width: 100%;
       aspect-ratio: 1;
       object-fit: cover;
-      border-top-left-radius: 8px;
-      border-bottom-left-radius: 8px;
+
+      @include desktop {
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+      }
+
+      @include mobile-tablet {
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+      }
     }
   }  
 
