--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,13 @@ img {
   line-height: 1;
 }
 //--------------------------------
+
+// not display hint & errors space 
+.mat-mdc-form-field-subscript-wrapper {
+  display: none;
+}
+
+// custom box shadow to use in some components (cards, paginator etc)
+.-custom-box-shadow {
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
