--- a/src/app/shared/components/news-filters/news-filters.component.scss
+++ b/src/app/shared/components/news-filters/news-filters.component.scss
@@ -1,4 +1,5 @@
 @import '/src/mixins.scss';
+@import '/src/consts.scss';
 
 $gap-form-fields: 12px;
 
@@ -24,4 +25,8 @@ mat-form-field,
 .-actions button
 {
   width: 100%;
+}
+
+button.-reset-btn {
+  background-color: map-get($primary, 100);
 }
