--- a/src/app/modules/authorized/modules/news/pages/news-index/news-index.page.html
+++ b/src/app/modules/authorized/modules/news/pages/news-index/news-index.page.html
@@ -2,7 +2,10 @@
   <div body>
     <div class="-news-container">
       <!-- Title -->
-      <div class="-title -h1">{{ title }}</div>
+      <div class="-title-section -custom-box-shadow">
+        <mat-icon>newspaper</mat-icon>
+        <span class="-title">{{ title }}</span>
+      </div>
 
       <!-- Filters -->
       <div class="-filters-container">
