--- a/src/app/shared/components/topbar/topbar.component.scss
+++ b/src/app/shared/components/topbar/topbar.component.scss
@@ -7,6 +7,10 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  background-color: #ffffff; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: map-get($primary, 500); 
+  box-shadow: 0 2px 4px #673ab775;
+
+  mat-icon {
+    color: #fff;
+  }
 }
