--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,6 +1,16 @@
-// A list of constants used in different components of the application
+// Material constants
+@import '@angular/material/theming';
 
+@include mat-core();
+
+$primary: mat-palette($mat-deep-purple);
+$accent:  mat-palette($mat-amber, A200, A100, A400);
+
+$theme: mat-light-theme($primary, $accent);
+
+@include angular-material-theme($theme);
+
+
+// Custom constants 
 $topbar-height: 60px;
 $sidebar-tablet-desktop-width: 250px;
-$sidebar-background-color: #E5E7EB;
-$page-background-color: #F3F4F6;
