--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 body { 
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
-  background-color: $page-background-color;
+  background-color: map-get($primary, 50);
 }
 
 a {
@@ -42,12 +42,27 @@ img {
 }
 //--------------------------------
 
-// not display hint & errors space 
-.mat-mdc-form-field-subscript-wrapper {
-  display: none;
-}
 
 // custom box shadow to use in some components (cards, paginator etc)
 .-custom-box-shadow {
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
+
+
+//--------------------------------
+// Overriding material rules
+
+// not display hint & errors space 
+.mat-mdc-form-field-subscript-wrapper {
+  display: none;
+}
+
+mat-expansion-panel {
+  background-color: map-get($primary, 50) !important;
+  color: white !important;
+}
+
+mat-paginator {
+  background-color: map-get($primary, 50) !important;
+}
+//--------------------------------
